--- a/Views/Testes/convidarTesters.hbs
+++ b/Views/Testes/convidarTesters.hbs
@@ -1,30 +1,33 @@
-<h3>Convidar Testers</h3>
-{{teste.nome}}
-{{userCriador.nome}}
-{{#if users}}
-<table class="striped">
-    <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Convidar</th>
-        </tr>
-    </thead>
-    <tbody>
-        {{#each users as |user|}}
-        <tr id="tr">
-            <td>{{user.nome}}</td>
-            <td>
-                <input type="hidden" name="_method" value="POST">
-                <button id='convidar' onclick="mandarConvite('{{user.nome}}')" class="btn blue">
-                    <span>Convidar</span>
-                </button>
-            </td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
-{{else}}
-<p>Vcoê não tem testes ainda</p>
-{{/if}}
+<div class="cotainerDashboard">
+    {{> _sidebar}}
+    <div class="contentDashboard">
+        <h3>Convidar Testers</h3>
+        {{teste.nome}}
+        {{userCriador.nome}}
+        {{#if users}}
+        <div id="testersTable">
+            <div id='testersTableHeader'>
 
+                <span>Nome</span>
+                <span>Convidar</span>
+            </div>
+            <ul>
+                {{#each users as |user|}}
+                <li id="tr">
+                    <div>{{user.nome}}</div>
+                    <div>
+                        <input type="hidden" name="_method" value="POST">
+                        <button id='convidar' onclick="mandarConvite('{{user.nome}}')" class="btn blue">
+                            <span>Convidar</span>
+                        </button>
+                    </div>
+                </li>
+                {{/each}}
+            </ul>
+        </div>
+        {{else}}
+        <p>Vcoê não tem testes ainda</p>
+        {{/if}}
+    </div>
+</div>
 <script src="/Javascript/convite.js"></script>
